:technologist: blog: research-on-automated-testing

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,11 @@
 ---
 name: Abdulaziz Abdi
-avatar: /static/images/avatar.png
+avatar: /static/images/avatar.jpeg
 occupation: Software Engineer
-company: Mmmh
 email: aboud3am81@gmail.com
-twitter: https://twitter.com/Twitter
+twitter: https://twitter.com/aboud3am81
 linkedin: https://www.linkedin.com
-github: https://github.com
+github: https://github.com/azeez1776
 ---
 
 Abdulaziz Abdi is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
